Tue Jun 29 10:50:30 UTC 2010  Martin Corino  <mcorino@remedy.nl>

	* protocols/ace/INet/AuthenticationBase.h:
	* protocols/ace/INet/AuthenticationBase.inl:
	* protocols/ace/INet/FTP_ClientRequestHandler.cpp:
	* protocols/ace/INet/FTP_ClientRequestHandler.h:
	  Small optimization for authentication (avoid copies).
	  Added documentation.

	* protocols/ace/INet/BufferedStreamBuffer.h:
	  Added documentation.

	* protocols/ace/INet/ConnectionCache.cpp:
	* protocols/ace/INet/ConnectionCache.h:
	* protocols/ace/INet/ConnectionCache.inl:
	  Fixed close_connection.
	  Added documentation.

Tue Jun 29 09:32:30 UTC 2010  Martin Corino  <mcorino@remedy.nl>

        * protocols/ace/INet/FTP_ClientRequestHandler.inl:
	  Fixed VC71 compile problem.

Tue Jun 29 08:59:30 UTC 2010  Martin Corino  <mcorino@remedy.nl>

	* protocols/ace/INet/FTP_URL.h:
	  Fixed Solaris 10 warning.

Mon Jun 28 19:15:54 UTC 2010  Chad Elliott  <elliott_c@ociweb.com>

        * bin/MakeProjectCreator/config/MPC.cfg:

          Modified the 'dynamic_types' setting to not complain if the
          TAO_ROOT environment variable isn't set during processing.  Users
          of only ACE may be confused by the MPC resulting message.

Mon Jun 28 14:07:30 UTC 2010  Martin Corino  <mcorino@remedy.nl>

        * NEWS:
          Update.

Mon Jun 28 13:06:30 UTC 2010  Martin Corino  <mcorino@remedy.nl>

        * protocols/ace/INet/INet_Log.h:
          Allow tracing to be enabled in debug builds.

Mon Jun 28 12:53:30 UTC 2010  Martin Corino  <mcorino@remedy.nl>

        * protocols/ace/INet/StreamHandler.h:
        * protocols/ace/INet/StreamHandler.cpp:
          Fixed problem with reactive write.

Mon Jun 28 12:19:05 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * html/Stats/index.shtml:
          No MPC440 xampler build exists

Mon Jun 28 11:32:30 UTC 2010  Martin Corino  <mcorino@remedy.nl>

        * protocols/ace/INet/FTP_Response.h:
          Added missing include.
