@@ -1,3 +1,12 @@
+Tue Jun 29 11:19:30 UTC 2010  Martin Corino  <mcorino@remedy.nl>
+
+	* protocols/tests/INet/MT_Get/Main.cpp:
+	  Fixed truncation warnings.
+
+	* protocols/ace/INet/INet_Log.h:
+	* protocols/ace/INet/INet_Log.cpp:
+	  Fixed versioned namespace errors.
+
 Tue Jun 29 10:50:30 UTC 2010  Martin Corino  <mcorino@remedy.nl>
 
 	* protocols/ace/INet/AuthenticationBase.h:
